# tasktracker

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: test.yml
backend/: attachment_store.py  auth.py  kb_store.py  main.py  mcp_server.py  models.py  seed.py  store.py
backend/routers/: attachments.py  columns.py  config.py  kb.py  tickets.py
data/: columns.json  config.json
docs/: IMPROVEMENTS-PLAN.md  INITIAL-PLAN.md  PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ArticleEditor.tsx  ArticleTree.tsx  AttachmentSection.tsx  Board.tsx  Column.tsx  CommentThread.tsx  ErrorBoundary.tsx  FilterBar.tsx  Header.tsx  KnowledgeBase.tsx  LoginScreen.tsx  SharedArticleView.tsx  TicketCard.tsx  TicketModal.tsx
frontend/src/contexts/: ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useArticles.ts  useAuth.ts  useTickets.ts
tests/: conftest.py  test_attachments.py  test_auth.py  test_columns_config.py  test_kb.py  test_tickets.py
